ProjetoBase/compilador.output
Não terminais inúteis na gramática

    lista_params
    $@12


Terminais sem uso na gramática

    LABEL
    TYPE
    GOTO
    ARRAY
    OF
    ABRE_CONCHETES
    FECHA_CONCHETES
    LOWER_THAN_ELSE


Regras inúteis na gramática

   92 parametros_ou_nada: ABRE_PARENTESES lista_params FECHA_PARENTESES

   93 $@12: %empty

   94 lista_params: $@12 lista_params VIRGULA expressao


Gramática

    0 $accept: programa $end

    1 $@1: %empty

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES input_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    3 input_idents: IDENT VIRGULA IDENT

    4 $@2: %empty

    5 $@3: %empty

    6 bloco: parte_declara_vars $@2 parte_declara_sub_rotinas $@3 comando_composto

    7 $@4: %empty

    8 parte_declara_vars: $@4 VAR declaracao_de_vars
    9                   | %empty

   10 declaracao_de_vars: declaracao_de_vars declaracao_de_var
   11                   | declaracao_de_var

   12 $@5: %empty

   13 declaracao_de_var: $@5 lista_idents DOIS_PONTOS tipo PONTO_E_VIRGULA

   14 tipo: TIPO

   15 lista_idents: lista_idents VIRGULA IDENT
   16             | IDENT

   17 comando_composto: T_BEGIN comandos T_END

   18 parte_declara_sub_rotinas: parte_declara_sub_rotinas declara_procedimento
   19                          | parte_declara_sub_rotinas declara_function
   20                          | %empty

   21 $@6: %empty

   22 $@7: %empty

   23 $@8: %empty

   24 declara_procedimento: PROCEDURE IDENT $@6 parametros_formais_ou_nada $@7 PONTO_E_VIRGULA bloco $@8 PONTO_E_VIRGULA

   25 parametros_formais_ou_nada: ABRE_PARENTESES lista_paramentro_formais FECHA_PARENTESES
   26                           | %empty

   27 declara_function: FUNCTION IDENT ABRE_PARENTESES lista_paramentro_formais FECHA_PARENTESES DOIS_PONTOS TIPO PONTO_E_VIRGULA bloco PONTO_E_VIRGULA
   28                 | FUNCTION IDENT DOIS_PONTOS TIPO PONTO_E_VIRGULA bloco PONTO_E_VIRGULA

   29 lista_paramentro_formais: lista_paramentro_formais VIRGULA parametro
   30                         | parametro

   31 parametro: VAR IDENT DOIS_PONTOS TIPO
   32          | IDENT DOIS_PONTOS TIPO

   33 comandos: comandos PONTO_E_VIRGULA comando
   34         | comando
   35         | %empty

   36 comando: atribui_ou_func
   37        | comando_composto
   38        | comando_condicional
   39        | comando_repetitivo
   40        | leitura
   41        | escrita

   42 $@9: %empty

   43 atribui_ou_func: IDENT $@9 continua_atibui_ou_func

   44 continua_atibui_ou_func: ATRIBUICAO atribui_contiunuacao
   45                        | parametros_ou_nada

   46 $@10: %empty

   47 atribui_contiunuacao: $@10 expressao

   48 $@11: %empty

   49 funcao_ou_ident: IDENT $@11 parametros_ou_nada

   50 parametros_ou_nada: %empty

   51 comando_condicional: if_then cond_else

   52 $@13: %empty

   53 if_then: IF expressao $@13 THEN comando

   54 cond_else: else_ou_nada

   55 $@14: %empty

   56 else_ou_nada: ELSE $@14 comando

   57 $@15: %empty

   58 comando_repetitivo: $@15 WHILE while_resto

   59 $@16: %empty

   60 while_resto: expressao $@16 DO comando

   61 expressao: expressao_simples relacao expressao_simples
   62          | expressao_simples

   63 relacao: IGUAL
   64        | MENOR
   65        | MAIOR
   66        | MAIOR_IGUAL
   67        | MENOR_IGUAL
   68        | DIFERENTE

   69 expressao_simples: termo
   70                  | MAIS termo
   71                  | MENOS termo
   72                  | expressao_simples MAIS termo
   73                  | expressao_simples MENOS termo
   74                  | expressao_simples OR termo

   75 termo: fator
   76      | termo DIV fator
   77      | termo VEZES fator
   78      | termo AND fator

   79 fator: funcao_ou_ident
   80      | NUMERO
   81      | VALOR_BOOL
   82      | ABRE_PARENTESES expressao_simples FECHA_PARENTESES
   83      | NOT fator

   84 leitura: READ ABRE_PARENTESES parametros_de_leitura FECHA_PARENTESES

   85 parametros_de_leitura: parametros_de_leitura VIRGULA parametro_leitura
   86                      | parametro_leitura

   87 parametro_leitura: IDENT

   88 escrita: WRITE ABRE_PARENTESES parametros_de_escrita FECHA_PARENTESES

   89 parametros_de_escrita: parametros_de_escrita VIRGULA parametro_escrita
   90                      | parametro_escrita

   91 parametro_escrita: expressao_simples


Terminais, com as regras onde eles aparecem

    $end (0) 0
    error (256)
    PROGRAM (258) 2
    ABRE_PARENTESES (259) 2 25 27 82 84 88
    FECHA_PARENTESES (260) 2 25 27 82 84 88
    VIRGULA (261) 3 15 29 85 89
    PONTO_E_VIRGULA (262) 2 13 24 27 28 33
    DOIS_PONTOS (263) 13 27 28 31 32
    PONTO (264) 2
    T_BEGIN (265) 17
    T_END (266) 17
    VAR (267) 8 31
    IDENT (268) 2 3 15 16 24 27 28 31 32 43 49 87
    ATRIBUICAO (269) 44
    LABEL (270)
    TYPE (271)
    PROCEDURE (272) 24
    FUNCTION (273) 27 28
    GOTO (274)
    IF (275) 53
    THEN (276) 53
    ELSE (277) 56
    WHILE (278) 58
    DO (279) 60
    ARRAY (280)
    OF (281)
    ABRE_CONCHETES (282)
    FECHA_CONCHETES (283)
    DIV (284) 76
    AND (285) 78
    NOT (286) 83
    OR (287) 74
    TIPO (288) 14 27 28 31 32
    VALOR_BOOL (289) 81
    NUMERO (290) 80
    MAIOR (291) 65
    MENOR (292) 64
    IGUAL (293) 63
    MENOR_IGUAL (294) 67
    MAIOR_IGUAL (295) 66
    DIFERENTE (296) 68
    MAIS (297) 70 72
    MENOS (298) 71 73
    VEZES (299) 77
    READ (300) 84
    WRITE (301) 88
    LOWER_THAN_ELSE (302)


Não terminais com as regras onde eles aparecem

    $accept (48)
        à esquerda: 0
    programa (49)
        à esquerda: 2
        à direita: 0
    $@1 (50)
        à esquerda: 1
        à direita: 2
    input_idents (51)
        à esquerda: 3
        à direita: 2
    bloco (52)
        à esquerda: 6
        à direita: 2 24 27 28
    $@2 (53)
        à esquerda: 4
        à direita: 6
    $@3 (54)
        à esquerda: 5
        à direita: 6
    parte_declara_vars (55)
        à esquerda: 8 9
        à direita: 6
    $@4 (56)
        à esquerda: 7
        à direita: 8
    declaracao_de_vars (57)
        à esquerda: 10 11
        à direita: 8 10
    declaracao_de_var (58)
        à esquerda: 13
        à direita: 10 11
    $@5 (59)
        à esquerda: 12
        à direita: 13
    tipo (60)
        à esquerda: 14
        à direita: 13
    lista_idents (61)
        à esquerda: 15 16
        à direita: 13 15
    comando_composto (62)
        à esquerda: 17
        à direita: 6 37
    parte_declara_sub_rotinas (63)
        à esquerda: 18 19 20
        à direita: 6 18 19
    declara_procedimento (64)
        à esquerda: 24
        à direita: 18
    $@6 (65)
        à esquerda: 21
        à direita: 24
    $@7 (66)
        à esquerda: 22
        à direita: 24
    $@8 (67)
        à esquerda: 23
        à direita: 24
    parametros_formais_ou_nada (68)
        à esquerda: 25 26
        à direita: 24
    declara_function (69)
        à esquerda: 27 28
        à direita: 19
    lista_paramentro_formais (70)
        à esquerda: 29 30
        à direita: 25 27 29
    parametro (71)
        à esquerda: 31 32
        à direita: 29 30
    comandos (72)
        à esquerda: 33 34 35
        à direita: 17 33
    comando (73)
        à esquerda: 36 37 38 39 40 41
        à direita: 33 34 53 56 60
    atribui_ou_func (74)
        à esquerda: 43
        à direita: 36
    $@9 (75)
        à esquerda: 42
        à direita: 43
    continua_atibui_ou_func (76)
        à esquerda: 44 45
        à direita: 43
    atribui_contiunuacao (77)
        à esquerda: 47
        à direita: 44
    $@10 (78)
        à esquerda: 46
        à direita: 47
    funcao_ou_ident <int_val> (79)
        à esquerda: 49
        à direita: 79
    $@11 (80)
        à esquerda: 48
        à direita: 49
    parametros_ou_nada <int_val> (81)
        à esquerda: 50
        à direita: 45 49
    comando_condicional (82)
        à esquerda: 51
        à direita: 38
    if_then (83)
        à esquerda: 53
        à direita: 51
    $@13 (84)
        à esquerda: 52
        à direita: 53
    cond_else (85)
        à esquerda: 54
        à direita: 51
    else_ou_nada (86)
        à esquerda: 56
        à direita: 54
    $@14 (87)
        à esquerda: 55
        à direita: 56
    comando_repetitivo (88)
        à esquerda: 58
        à direita: 39
    $@15 (89)
        à esquerda: 57
        à direita: 58
    while_resto (90)
        à esquerda: 60
        à direita: 58
    $@16 (91)
        à esquerda: 59
        à direita: 60
    expressao <int_val> (92)
        à esquerda: 61 62
        à direita: 47 53 60
    relacao <str> (93)
        à esquerda: 63 64 65 66 67 68
        à direita: 61
    expressao_simples <int_val> (94)
        à esquerda: 69 70 71 72 73 74
        à direita: 61 62 72 73 74 82 91
    termo <int_val> (95)
        à esquerda: 75 76 77 78
        à direita: 69 70 71 72 73 74 76 77 78
    fator <int_val> (96)
        à esquerda: 79 80 81 82 83
        à direita: 75 76 77 78 83
    leitura (97)
        à esquerda: 84
        à direita: 40
    parametros_de_leitura (98)
        à esquerda: 85 86
        à direita: 84 85
    parametro_leitura (99)
        à esquerda: 87
        à direita: 85 86
    escrita (100)
        à esquerda: 88
        à direita: 41
    parametros_de_escrita (101)
        à esquerda: 89 90
        à direita: 88 89
    parametro_escrita (102)
        à esquerda: 91
        à direita: 89 90


Estado 0

    0 $accept: • programa $end

    $padrão  reduzir usando a regra 1 ($@1)

    programa  ir ao estado 1
    $@1       ir ao estado 2


Estado 1

    0 $accept: programa • $end

    $end  deslocar, e ir ao estado 3


Estado 2

    2 programa: $@1 • PROGRAM IDENT ABRE_PARENTESES input_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    PROGRAM  deslocar, e ir ao estado 4


Estado 3

    0 $accept: programa $end •

    $padrão  aceitar


Estado 4

    2 programa: $@1 PROGRAM • IDENT ABRE_PARENTESES input_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    IDENT  deslocar, e ir ao estado 5


Estado 5

    2 programa: $@1 PROGRAM IDENT • ABRE_PARENTESES input_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    ABRE_PARENTESES  deslocar, e ir ao estado 6


Estado 6

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES • input_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    IDENT  deslocar, e ir ao estado 7

    input_idents  ir ao estado 8


Estado 7

    3 input_idents: IDENT • VIRGULA IDENT

    VIRGULA  deslocar, e ir ao estado 9


Estado 8

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES input_idents • FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    FECHA_PARENTESES  deslocar, e ir ao estado 10


Estado 9

    3 input_idents: IDENT VIRGULA • IDENT

    IDENT  deslocar, e ir ao estado 11


Estado 10

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES input_idents FECHA_PARENTESES • PONTO_E_VIRGULA bloco PONTO

    PONTO_E_VIRGULA  deslocar, e ir ao estado 12


Estado 11

    3 input_idents: IDENT VIRGULA IDENT •

    $padrão  reduzir usando a regra 3 (input_idents)


Estado 12

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES input_idents FECHA_PARENTESES PONTO_E_VIRGULA • bloco PONTO

    VAR      reduzir usando a regra 7 ($@4)
    $padrão  reduzir usando a regra 9 (parte_declara_vars)

    bloco               ir ao estado 13
    parte_declara_vars  ir ao estado 14
    $@4                 ir ao estado 15


Estado 13

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES input_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco • PONTO

    PONTO  deslocar, e ir ao estado 16


Estado 14

    6 bloco: parte_declara_vars • $@2 parte_declara_sub_rotinas $@3 comando_composto

    $padrão  reduzir usando a regra 4 ($@2)

    $@2  ir ao estado 17


Estado 15

    8 parte_declara_vars: $@4 • VAR declaracao_de_vars

    VAR  deslocar, e ir ao estado 18


Estado 16

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES input_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO •

    $padrão  reduzir usando a regra 2 (programa)


Estado 17

    6 bloco: parte_declara_vars $@2 • parte_declara_sub_rotinas $@3 comando_composto

    $padrão  reduzir usando a regra 20 (parte_declara_sub_rotinas)

    parte_declara_sub_rotinas  ir ao estado 19


Estado 18

    8 parte_declara_vars: $@4 VAR • declaracao_de_vars

    $padrão  reduzir usando a regra 12 ($@5)

    declaracao_de_vars  ir ao estado 20
    declaracao_de_var   ir ao estado 21
    $@5                 ir ao estado 22


Estado 19

    6 bloco: parte_declara_vars $@2 parte_declara_sub_rotinas • $@3 comando_composto
   18 parte_declara_sub_rotinas: parte_declara_sub_rotinas • declara_procedimento
   19                          | parte_declara_sub_rotinas • declara_function

    PROCEDURE  deslocar, e ir ao estado 23
    FUNCTION   deslocar, e ir ao estado 24

    $padrão  reduzir usando a regra 5 ($@3)

    $@3                   ir ao estado 25
    declara_procedimento  ir ao estado 26
    declara_function      ir ao estado 27


Estado 20

    8 parte_declara_vars: $@4 VAR declaracao_de_vars •
   10 declaracao_de_vars: declaracao_de_vars • declaracao_de_var

    IDENT    reduzir usando a regra 12 ($@5)
    $padrão  reduzir usando a regra 8 (parte_declara_vars)

    declaracao_de_var  ir ao estado 28
    $@5                ir ao estado 22


Estado 21

   11 declaracao_de_vars: declaracao_de_var •

    $padrão  reduzir usando a regra 11 (declaracao_de_vars)


Estado 22

   13 declaracao_de_var: $@5 • lista_idents DOIS_PONTOS tipo PONTO_E_VIRGULA

    IDENT  deslocar, e ir ao estado 29

    lista_idents  ir ao estado 30


Estado 23

   24 declara_procedimento: PROCEDURE • IDENT $@6 parametros_formais_ou_nada $@7 PONTO_E_VIRGULA bloco $@8 PONTO_E_VIRGULA

    IDENT  deslocar, e ir ao estado 31


Estado 24

   27 declara_function: FUNCTION • IDENT ABRE_PARENTESES lista_paramentro_formais FECHA_PARENTESES DOIS_PONTOS TIPO PONTO_E_VIRGULA bloco PONTO_E_VIRGULA
   28                 | FUNCTION • IDENT DOIS_PONTOS TIPO PONTO_E_VIRGULA bloco PONTO_E_VIRGULA

    IDENT  deslocar, e ir ao estado 32


Estado 25

    6 bloco: parte_declara_vars $@2 parte_declara_sub_rotinas $@3 • comando_composto

    T_BEGIN  deslocar, e ir ao estado 33

    comando_composto  ir ao estado 34


Estado 26

   18 parte_declara_sub_rotinas: parte_declara_sub_rotinas declara_procedimento •

    $padrão  reduzir usando a regra 18 (parte_declara_sub_rotinas)


Estado 27

   19 parte_declara_sub_rotinas: parte_declara_sub_rotinas declara_function •

    $padrão  reduzir usando a regra 19 (parte_declara_sub_rotinas)


Estado 28

   10 declaracao_de_vars: declaracao_de_vars declaracao_de_var •

    $padrão  reduzir usando a regra 10 (declaracao_de_vars)


Estado 29

   16 lista_idents: IDENT •

    $padrão  reduzir usando a regra 16 (lista_idents)


Estado 30

   13 declaracao_de_var: $@5 lista_idents • DOIS_PONTOS tipo PONTO_E_VIRGULA
   15 lista_idents: lista_idents • VIRGULA IDENT

    VIRGULA      deslocar, e ir ao estado 35
    DOIS_PONTOS  deslocar, e ir ao estado 36


Estado 31

   24 declara_procedimento: PROCEDURE IDENT • $@6 parametros_formais_ou_nada $@7 PONTO_E_VIRGULA bloco $@8 PONTO_E_VIRGULA

    $padrão  reduzir usando a regra 21 ($@6)

    $@6  ir ao estado 37


Estado 32

   27 declara_function: FUNCTION IDENT • ABRE_PARENTESES lista_paramentro_formais FECHA_PARENTESES DOIS_PONTOS TIPO PONTO_E_VIRGULA bloco PONTO_E_VIRGULA
   28                 | FUNCTION IDENT • DOIS_PONTOS TIPO PONTO_E_VIRGULA bloco PONTO_E_VIRGULA

    ABRE_PARENTESES  deslocar, e ir ao estado 38
    DOIS_PONTOS      deslocar, e ir ao estado 39


Estado 33

   17 comando_composto: T_BEGIN • comandos T_END

    T_BEGIN  deslocar, e ir ao estado 33
    IDENT    deslocar, e ir ao estado 40
    IF       deslocar, e ir ao estado 41
    READ     deslocar, e ir ao estado 42
    WRITE    deslocar, e ir ao estado 43

    WHILE    reduzir usando a regra 57 ($@15)
    $padrão  reduzir usando a regra 35 (comandos)

    comando_composto     ir ao estado 44
    comandos             ir ao estado 45
    comando              ir ao estado 46
    atribui_ou_func      ir ao estado 47
    comando_condicional  ir ao estado 48
    if_then              ir ao estado 49
    comando_repetitivo   ir ao estado 50
    $@15                 ir ao estado 51
    leitura              ir ao estado 52
    escrita              ir ao estado 53


Estado 34

    6 bloco: parte_declara_vars $@2 parte_declara_sub_rotinas $@3 comando_composto •

    $padrão  reduzir usando a regra 6 (bloco)


Estado 35

   15 lista_idents: lista_idents VIRGULA • IDENT

    IDENT  deslocar, e ir ao estado 54


Estado 36

   13 declaracao_de_var: $@5 lista_idents DOIS_PONTOS • tipo PONTO_E_VIRGULA

    TIPO  deslocar, e ir ao estado 55

    tipo  ir ao estado 56


Estado 37

   24 declara_procedimento: PROCEDURE IDENT $@6 • parametros_formais_ou_nada $@7 PONTO_E_VIRGULA bloco $@8 PONTO_E_VIRGULA

    ABRE_PARENTESES  deslocar, e ir ao estado 57

    $padrão  reduzir usando a regra 26 (parametros_formais_ou_nada)

    parametros_formais_ou_nada  ir ao estado 58


Estado 38

   27 declara_function: FUNCTION IDENT ABRE_PARENTESES • lista_paramentro_formais FECHA_PARENTESES DOIS_PONTOS TIPO PONTO_E_VIRGULA bloco PONTO_E_VIRGULA

    VAR    deslocar, e ir ao estado 59
    IDENT  deslocar, e ir ao estado 60

    lista_paramentro_formais  ir ao estado 61
    parametro                 ir ao estado 62


Estado 39

   28 declara_function: FUNCTION IDENT DOIS_PONTOS • TIPO PONTO_E_VIRGULA bloco PONTO_E_VIRGULA

    TIPO  deslocar, e ir ao estado 63


Estado 40

   43 atribui_ou_func: IDENT • $@9 continua_atibui_ou_func

    $padrão  reduzir usando a regra 42 ($@9)

    $@9  ir ao estado 64


Estado 41

   53 if_then: IF • expressao $@13 THEN comando

    ABRE_PARENTESES  deslocar, e ir ao estado 65
    IDENT            deslocar, e ir ao estado 66
    NOT              deslocar, e ir ao estado 67
    VALOR_BOOL       deslocar, e ir ao estado 68
    NUMERO           deslocar, e ir ao estado 69
    MAIS             deslocar, e ir ao estado 70
    MENOS            deslocar, e ir ao estado 71

    funcao_ou_ident    ir ao estado 72
    expressao          ir ao estado 73
    expressao_simples  ir ao estado 74
    termo              ir ao estado 75
    fator              ir ao estado 76


Estado 42

   84 leitura: READ • ABRE_PARENTESES parametros_de_leitura FECHA_PARENTESES

    ABRE_PARENTESES  deslocar, e ir ao estado 77


Estado 43

   88 escrita: WRITE • ABRE_PARENTESES parametros_de_escrita FECHA_PARENTESES

    ABRE_PARENTESES  deslocar, e ir ao estado 78


Estado 44

   37 comando: comando_composto •

    $padrão  reduzir usando a regra 37 (comando)


Estado 45

   17 comando_composto: T_BEGIN comandos • T_END
   33 comandos: comandos • PONTO_E_VIRGULA comando

    PONTO_E_VIRGULA  deslocar, e ir ao estado 79
    T_END            deslocar, e ir ao estado 80


Estado 46

   34 comandos: comando •

    $padrão  reduzir usando a regra 34 (comandos)


Estado 47

   36 comando: atribui_ou_func •

    $padrão  reduzir usando a regra 36 (comando)


Estado 48

   38 comando: comando_condicional •

    $padrão  reduzir usando a regra 38 (comando)


Estado 49

   51 comando_condicional: if_then • cond_else

    ELSE  deslocar, e ir ao estado 81

    cond_else     ir ao estado 82
    else_ou_nada  ir ao estado 83


Estado 50

   39 comando: comando_repetitivo •

    $padrão  reduzir usando a regra 39 (comando)


Estado 51

   58 comando_repetitivo: $@15 • WHILE while_resto

    WHILE  deslocar, e ir ao estado 84


Estado 52

   40 comando: leitura •

    $padrão  reduzir usando a regra 40 (comando)


Estado 53

   41 comando: escrita •

    $padrão  reduzir usando a regra 41 (comando)


Estado 54

   15 lista_idents: lista_idents VIRGULA IDENT •

    $padrão  reduzir usando a regra 15 (lista_idents)


Estado 55

   14 tipo: TIPO •

    $padrão  reduzir usando a regra 14 (tipo)


Estado 56

   13 declaracao_de_var: $@5 lista_idents DOIS_PONTOS tipo • PONTO_E_VIRGULA

    PONTO_E_VIRGULA  deslocar, e ir ao estado 85


Estado 57

   25 parametros_formais_ou_nada: ABRE_PARENTESES • lista_paramentro_formais FECHA_PARENTESES

    VAR    deslocar, e ir ao estado 59
    IDENT  deslocar, e ir ao estado 60

    lista_paramentro_formais  ir ao estado 86
    parametro                 ir ao estado 62


Estado 58

   24 declara_procedimento: PROCEDURE IDENT $@6 parametros_formais_ou_nada • $@7 PONTO_E_VIRGULA bloco $@8 PONTO_E_VIRGULA

    $padrão  reduzir usando a regra 22 ($@7)

    $@7  ir ao estado 87


Estado 59

   31 parametro: VAR • IDENT DOIS_PONTOS TIPO

    IDENT  deslocar, e ir ao estado 88


Estado 60

   32 parametro: IDENT • DOIS_PONTOS TIPO

    DOIS_PONTOS  deslocar, e ir ao estado 89


Estado 61

   27 declara_function: FUNCTION IDENT ABRE_PARENTESES lista_paramentro_formais • FECHA_PARENTESES DOIS_PONTOS TIPO PONTO_E_VIRGULA bloco PONTO_E_VIRGULA
   29 lista_paramentro_formais: lista_paramentro_formais • VIRGULA parametro

    FECHA_PARENTESES  deslocar, e ir ao estado 90
    VIRGULA           deslocar, e ir ao estado 91


Estado 62

   30 lista_paramentro_formais: parametro •

    $padrão  reduzir usando a regra 30 (lista_paramentro_formais)


Estado 63

   28 declara_function: FUNCTION IDENT DOIS_PONTOS TIPO • PONTO_E_VIRGULA bloco PONTO_E_VIRGULA

    PONTO_E_VIRGULA  deslocar, e ir ao estado 92


Estado 64

   43 atribui_ou_func: IDENT $@9 • continua_atibui_ou_func

    ATRIBUICAO  deslocar, e ir ao estado 93

    $padrão  reduzir usando a regra 50 (parametros_ou_nada)

    continua_atibui_ou_func  ir ao estado 94
    parametros_ou_nada       ir ao estado 95


Estado 65

   82 fator: ABRE_PARENTESES • expressao_simples FECHA_PARENTESES

    ABRE_PARENTESES  deslocar, e ir ao estado 65
    IDENT            deslocar, e ir ao estado 66
    NOT              deslocar, e ir ao estado 67
    VALOR_BOOL       deslocar, e ir ao estado 68
    NUMERO           deslocar, e ir ao estado 69
    MAIS             deslocar, e ir ao estado 70
    MENOS            deslocar, e ir ao estado 71

    funcao_ou_ident    ir ao estado 72
    expressao_simples  ir ao estado 96
    termo              ir ao estado 75
    fator              ir ao estado 76


Estado 66

   49 funcao_ou_ident: IDENT • $@11 parametros_ou_nada

    $padrão  reduzir usando a regra 48 ($@11)

    $@11  ir ao estado 97


Estado 67

   83 fator: NOT • fator

    ABRE_PARENTESES  deslocar, e ir ao estado 65
    IDENT            deslocar, e ir ao estado 66
    NOT              deslocar, e ir ao estado 67
    VALOR_BOOL       deslocar, e ir ao estado 68
    NUMERO           deslocar, e ir ao estado 69

    funcao_ou_ident  ir ao estado 72
    fator            ir ao estado 98


Estado 68

   81 fator: VALOR_BOOL •

    $padrão  reduzir usando a regra 81 (fator)


Estado 69

   80 fator: NUMERO •

    $padrão  reduzir usando a regra 80 (fator)


Estado 70

   70 expressao_simples: MAIS • termo

    ABRE_PARENTESES  deslocar, e ir ao estado 65
    IDENT            deslocar, e ir ao estado 66
    NOT              deslocar, e ir ao estado 67
    VALOR_BOOL       deslocar, e ir ao estado 68
    NUMERO           deslocar, e ir ao estado 69

    funcao_ou_ident  ir ao estado 72
    termo            ir ao estado 99
    fator            ir ao estado 76


Estado 71

   71 expressao_simples: MENOS • termo

    ABRE_PARENTESES  deslocar, e ir ao estado 65
    IDENT            deslocar, e ir ao estado 66
    NOT              deslocar, e ir ao estado 67
    VALOR_BOOL       deslocar, e ir ao estado 68
    NUMERO           deslocar, e ir ao estado 69

    funcao_ou_ident  ir ao estado 72
    termo            ir ao estado 100
    fator            ir ao estado 76


Estado 72

   79 fator: funcao_ou_ident •

    $padrão  reduzir usando a regra 79 (fator)


Estado 73

   53 if_then: IF expressao • $@13 THEN comando

    $padrão  reduzir usando a regra 52 ($@13)

    $@13  ir ao estado 101


Estado 74

   61 expressao: expressao_simples • relacao expressao_simples
   62          | expressao_simples •
   72 expressao_simples: expressao_simples • MAIS termo
   73                  | expressao_simples • MENOS termo
   74                  | expressao_simples • OR termo

    OR           deslocar, e ir ao estado 102
    MAIOR        deslocar, e ir ao estado 103
    MENOR        deslocar, e ir ao estado 104
    IGUAL        deslocar, e ir ao estado 105
    MENOR_IGUAL  deslocar, e ir ao estado 106
    MAIOR_IGUAL  deslocar, e ir ao estado 107
    DIFERENTE    deslocar, e ir ao estado 108
    MAIS         deslocar, e ir ao estado 109
    MENOS        deslocar, e ir ao estado 110

    $padrão  reduzir usando a regra 62 (expressao)

    relacao  ir ao estado 111


Estado 75

   69 expressao_simples: termo •
   76 termo: termo • DIV fator
   77      | termo • VEZES fator
   78      | termo • AND fator

    DIV    deslocar, e ir ao estado 112
    AND    deslocar, e ir ao estado 113
    VEZES  deslocar, e ir ao estado 114

    $padrão  reduzir usando a regra 69 (expressao_simples)


Estado 76

   75 termo: fator •

    $padrão  reduzir usando a regra 75 (termo)


Estado 77

   84 leitura: READ ABRE_PARENTESES • parametros_de_leitura FECHA_PARENTESES

    IDENT  deslocar, e ir ao estado 115

    parametros_de_leitura  ir ao estado 116
    parametro_leitura      ir ao estado 117


Estado 78

   88 escrita: WRITE ABRE_PARENTESES • parametros_de_escrita FECHA_PARENTESES

    ABRE_PARENTESES  deslocar, e ir ao estado 65
    IDENT            deslocar, e ir ao estado 66
    NOT              deslocar, e ir ao estado 67
    VALOR_BOOL       deslocar, e ir ao estado 68
    NUMERO           deslocar, e ir ao estado 69
    MAIS             deslocar, e ir ao estado 70
    MENOS            deslocar, e ir ao estado 71

    funcao_ou_ident        ir ao estado 72
    expressao_simples      ir ao estado 118
    termo                  ir ao estado 75
    fator                  ir ao estado 76
    parametros_de_escrita  ir ao estado 119
    parametro_escrita      ir ao estado 120


Estado 79

   33 comandos: comandos PONTO_E_VIRGULA • comando

    T_BEGIN  deslocar, e ir ao estado 33
    IDENT    deslocar, e ir ao estado 40
    IF       deslocar, e ir ao estado 41
    READ     deslocar, e ir ao estado 42
    WRITE    deslocar, e ir ao estado 43

    $padrão  reduzir usando a regra 57 ($@15)

    comando_composto     ir ao estado 44
    comando              ir ao estado 121
    atribui_ou_func      ir ao estado 47
    comando_condicional  ir ao estado 48
    if_then              ir ao estado 49
    comando_repetitivo   ir ao estado 50
    $@15                 ir ao estado 51
    leitura              ir ao estado 52
    escrita              ir ao estado 53


Estado 80

   17 comando_composto: T_BEGIN comandos T_END •

    $padrão  reduzir usando a regra 17 (comando_composto)


Estado 81

   56 else_ou_nada: ELSE • $@14 comando

    $padrão  reduzir usando a regra 55 ($@14)

    $@14  ir ao estado 122


Estado 82

   51 comando_condicional: if_then cond_else •

    $padrão  reduzir usando a regra 51 (comando_condicional)


Estado 83

   54 cond_else: else_ou_nada •

    $padrão  reduzir usando a regra 54 (cond_else)


Estado 84

   58 comando_repetitivo: $@15 WHILE • while_resto

    ABRE_PARENTESES  deslocar, e ir ao estado 65
    IDENT            deslocar, e ir ao estado 66
    NOT              deslocar, e ir ao estado 67
    VALOR_BOOL       deslocar, e ir ao estado 68
    NUMERO           deslocar, e ir ao estado 69
    MAIS             deslocar, e ir ao estado 70
    MENOS            deslocar, e ir ao estado 71

    funcao_ou_ident    ir ao estado 72
    while_resto        ir ao estado 123
    expressao          ir ao estado 124
    expressao_simples  ir ao estado 74
    termo              ir ao estado 75
    fator              ir ao estado 76


Estado 85

   13 declaracao_de_var: $@5 lista_idents DOIS_PONTOS tipo PONTO_E_VIRGULA •

    $padrão  reduzir usando a regra 13 (declaracao_de_var)


Estado 86

   25 parametros_formais_ou_nada: ABRE_PARENTESES lista_paramentro_formais • FECHA_PARENTESES
   29 lista_paramentro_formais: lista_paramentro_formais • VIRGULA parametro

    FECHA_PARENTESES  deslocar, e ir ao estado 125
    VIRGULA           deslocar, e ir ao estado 91


Estado 87

   24 declara_procedimento: PROCEDURE IDENT $@6 parametros_formais_ou_nada $@7 • PONTO_E_VIRGULA bloco $@8 PONTO_E_VIRGULA

    PONTO_E_VIRGULA  deslocar, e ir ao estado 126


Estado 88

   31 parametro: VAR IDENT • DOIS_PONTOS TIPO

    DOIS_PONTOS  deslocar, e ir ao estado 127


Estado 89

   32 parametro: IDENT DOIS_PONTOS • TIPO

    TIPO  deslocar, e ir ao estado 128


Estado 90

   27 declara_function: FUNCTION IDENT ABRE_PARENTESES lista_paramentro_formais FECHA_PARENTESES • DOIS_PONTOS TIPO PONTO_E_VIRGULA bloco PONTO_E_VIRGULA

    DOIS_PONTOS  deslocar, e ir ao estado 129


Estado 91

   29 lista_paramentro_formais: lista_paramentro_formais VIRGULA • parametro

    VAR    deslocar, e ir ao estado 59
    IDENT  deslocar, e ir ao estado 60

    parametro  ir ao estado 130


Estado 92

   28 declara_function: FUNCTION IDENT DOIS_PONTOS TIPO PONTO_E_VIRGULA • bloco PONTO_E_VIRGULA

    VAR      reduzir usando a regra 7 ($@4)
    $padrão  reduzir usando a regra 9 (parte_declara_vars)

    bloco               ir ao estado 131
    parte_declara_vars  ir ao estado 14
    $@4                 ir ao estado 15


Estado 93

   44 continua_atibui_ou_func: ATRIBUICAO • atribui_contiunuacao

    $padrão  reduzir usando a regra 46 ($@10)

    atribui_contiunuacao  ir ao estado 132
    $@10                  ir ao estado 133


Estado 94

   43 atribui_ou_func: IDENT $@9 continua_atibui_ou_func •

    $padrão  reduzir usando a regra 43 (atribui_ou_func)


Estado 95

   45 continua_atibui_ou_func: parametros_ou_nada •

    $padrão  reduzir usando a regra 45 (continua_atibui_ou_func)


Estado 96
